// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <SearchScreen/> Debe mostrar a Batman y el input con el valor del query string 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-12"
    >
      <h1>
        Search Screen
      </h1>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <p
        className="h4"
      >
        Search Form
      </p>
      <hr />
      <form
        className=""
        onSubmit={[Function]}
      >
        <div
          className="row"
        >
          <div
            className="col-10"
          >
            <input
              className="form-control"
              name="searchText"
              onChange={[Function]}
              placeholder="Find your Hero"
              type="text"
              value="batman"
            />
          </div>
          <div
            className="col-2"
          >
            <button
              className="btn btn-outline-primary"
              disabled={false}
              type="submit"
            >
              Search
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      className="col-7"
    >
      <p
        className="h4"
      >
        Results
      </p>
      <hr />
      <div
        className="card"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="col-5"
          >
            <img
              alt="Batman"
              className="card-img-top"
              src="./assets/heroes/dc-batman.jpg"
            />
          </div>
          <div
            className="col-7"
          >
            <div
              className="card-body"
            >
              <div
                className="card-title h5"
              >
                Batman
              </div>
              <p
                className="card-text"
              >
                Bruce Wayne
              </p>
              <p
                className="card-text"
              >
                <small
                  className="text-muted"
                >
                  Detective Comics #27
                </small>
              </p>
              <a
                href="/hero/dc-batman"
                onClick={[Function]}
              >
                <button
                  className="btn btn-outline-primary"
                  disabled={false}
                  type="button"
                >
                  Mas...
                </button>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pruebas en <SearchScreen/> Debe mostrarse correctamente con valores por defecto 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-12"
    >
      <h1>
        Search Screen
      </h1>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <p
        className="h4"
      >
        Search Form
      </p>
      <hr />
      <form
        className=""
        onSubmit={[Function]}
      >
        <div
          className="row"
        >
          <div
            className="col-10"
          >
            <input
              className="form-control"
              name="searchText"
              onChange={[Function]}
              placeholder="Find your Hero"
              type="text"
              value=""
            />
          </div>
          <div
            className="col-2"
          >
            <button
              className="btn btn-outline-primary"
              disabled={false}
              type="submit"
            >
              Search
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      className="col-7"
    >
      <p
        className="h4"
      >
        Results
      </p>
      <hr />
      <div
        className="p-3 mb-2 bg-info text-white rounded text-center"
      >
        <p
          className="h3"
        >
          Search a hero 
        </p>
      </div>
    </div>
  </div>
</div>
`;
